# assistive-follower-robot

./: DATASET_CARD.md  MODEL_CARD.md  NOTICE.md  README.md  package.xml  requirements.txt  setup.cfg  setup.py
assistive_follower_robot/: gap_follower_node.py  sim_heading_node.py  vision_angle_node.py
config/: params.yaml
data/: README.md  sample_dataset.csv  shoe_dataset.csv
data/metadata/: raw_archive_manifest.json  sample_image_manifest.csv
docs/: data_collection.md  hardware.md  portfolio_scope.md  ros2_nodes.md  system_overview.md  testing.md  vision_model.md  visual_index.md
launch/: follower.launch.py
models/: README.md
references/: README.md
references/original_scripts/: import_images.py  import_pandas_as_pd.py  live_predict.py  readme.txt.txt  train.py
references/source_documents/: Shoe_location_detection_model.docx
tools/: import_labelme_annotations.py  live_oakd_predict.py  make_sample_contact_sheet.py  train_shoe_regressor.py
